--- a/publican/po/ja.po
+++ b/publican/po/ja.po
@@ -1,11 +1,12 @@
 # khasida <khasida@fedoraproject.org>, 2012. #zanata
+# miey <miey@fedoraproject.org>, 2012. #zanata
 # ykatabam <ykatabam@fedoraproject.org>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2012-08-30 03:06-0400\n"
-"Last-Translator: khasida <khasida@fedoraproject.org>\n"
+"PO-Revision-Date: 2012-08-30 08:48-0400\n"
+"Last-Translator: miey <miey@fedoraproject.org>\n"
 "Language-Team: Japanese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1178,7 +1179,7 @@ msgstr ""
 
 #: lib/Publican.pm:309
 msgid ""
-"Splash pages should be generated to be comaptible with this web style. Valid"
+"Splash pages should be generated to be compatible with this web style. Valid"
 " values are 1 and 2."
 msgstr ""
 
@@ -1254,7 +1255,7 @@ msgstr ""
 
 #: lib/Publican.pm:214
 msgid ""
-"The name of the main xml and ent files for this books, sans file extension "
+"The name of the main xml and ent files for this book, sans file extension "
 "and language. Fetched from docname if not set."
 msgstr ""
 
@@ -1359,7 +1360,7 @@ msgstr ""
 #. ($edition,$release)
 #: lib/Publican/Translate.pm:292
 msgid "Translation files synchronised with XML sources %1-%2"
-msgstr "翻訳ファイルを XML ソースバージョン %1-%2 と同期化"
+msgstr "翻訳ファイルを XML ソースバージョン %1-%2 と同期"
 
 #: lib/Publican.pm:276
 msgid ""
