--- a/publican/po/publican.pot
+++ b/publican/po/publican.pot
@@ -1162,7 +1162,7 @@ msgid "Space-separated list of packages the desktop package requires."
 msgstr ""
 
 #: lib/Publican.pm:309
-msgid "Splash pages should be generated to be comaptible with this web style. Valid values are 1 and 2."
+msgid "Splash pages should be generated to be compatible with this web style. Valid values are 1 and 2."
 msgstr ""
 
 #. ($book)
@@ -1232,7 +1232,7 @@ msgid "The name of the book, article, set, or brand"
 msgstr ""
 
 #: lib/Publican.pm:214
-msgid "The name of the main xml and ent files for this books, sans file extension and language. Fetched from docname if not set."
+msgid "The name of the main xml and ent files for this book, sans file extension and language. Fetched from docname if not set."
 msgstr ""
 
 #: bin/publican:114
