--- a/publican/po/pl.po
+++ b/publican/po/pl.po
@@ -1399,7 +1399,7 @@ msgstr ""
 
 #: lib/Publican.pm:309
 msgid ""
-"Splash pages should be generated to be comaptible with this web style. Valid"
+"Splash pages should be generated to be compatible with this web style. Valid"
 " values are 1 and 2."
 msgstr ""
 
@@ -1489,7 +1489,7 @@ msgstr "Nazwa książki, artykułu, zestawu lub marki"
 
 #: lib/Publican.pm:214
 msgid ""
-"The name of the main xml and ent files for this books, sans file extension "
+"The name of the main xml and ent files for this book, sans file extension "
 "and language. Fetched from docname if not set."
 msgstr ""
 
