--- a/publican/po/pl.po
+++ b/publican/po/pl.po
@@ -1,14 +1,10 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+# raven <piotrdrag@gmail.com>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: \n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2012-08-31 10:30-0400\n"
+"Last-Translator: raven <piotrdrag@gmail.com>\n"
 "Language-Team: Polish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,7 +24,7 @@ msgstr ""
 
 #: bin/publican:575
 msgid "$ cd path/to/brand"
-msgstr ""
+msgstr "$ cd ścieżka/do/marki"
 
 #: bin/publican:576
 msgid "$ publican build --formats=xml --langs=all --publish"
@@ -36,11 +32,11 @@ msgstr ""
 
 #: bin/publican:578
 msgid "$ publican install_brand --web --path=/path/to/site/%{brand}"
-msgstr ""
+msgstr "$ publican install_brand --web --path=/ścieżka/do/witryny/%{brand}"
 
 #: bin/publican:579
 msgid "$ publican update_site --site_config /path/to/site/config"
-msgstr ""
+msgstr "$ publican update_site --site_config /ścieżka/do/konfiguracji/witryny"
 
 #. ($rpmbuild,WTERMSIG($?))
 # translation auto-copied from project Publican, version 3, document publican
@@ -97,7 +93,7 @@ msgstr "%1 jest wymaganym parametrem"
 #: lib/Publican.pm:1205 lib/Publican.pm:1210 lib/Publican.pm:1212
 #: lib/Publican.pm:1214 lib/Publican.pm:1216
 msgid "%1 is a required option for add_revision"
-msgstr ""
+msgstr "%1 jest wymaganą opcją dla add_revision"
 
 #. ($action)
 # translation auto-copied from project Publican, version 3, document publican
@@ -132,7 +128,7 @@ msgstr "\"lang\" jest obowiązkowym parametrem"
 
 #: lib/Publican.pm:1303
 msgid "'lang' is a required option for get_ed_rev"
-msgstr ""
+msgstr "\"lang\" jest wymaganą opcją dla get_ed_rev"
 
 # translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/XmlClean.pm:567
@@ -203,15 +199,20 @@ msgid ""
 "A comma-separated list of XML attributes that are not permitted in the "
 "source."
 msgstr ""
+"Lista atrybutów XML oddzielonych przecinkami, które nie są dozwolone w "
+"źródle."
 
 #: lib/Publican.pm:91
 msgid ""
 "A comma-separated list of XML tags that are not permitted in the source."
 msgstr ""
+"Lista znaczników XML oddzielonych przecinkami, które nie są dozwolone w "
+"źródle."
 
 #: lib/Publican.pm:297
 msgid "A comma-separated list of the formats to use for the web packages."
 msgstr ""
+"Lista formatów oddzielonych przecinkami, które używać dla pakietów WWW."
 
 #: lib/Publican/CreateBook.pm:242
 msgid ""
@@ -1625,7 +1626,7 @@ msgstr "Przetłumaczone"
 #. ($edition,$release)
 #: lib/Publican/Translate.pm:292
 msgid "Translation files synchronised with XML sources %1-%2"
-msgstr ""
+msgstr "Pliki tłumaczeń zsynchronizowano z kodem źródłowym XML w wersji %1-%2"
 
 # translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican.pm:276
