update Common Content translations

--- a/publican/datadir/Common_Content/common/hi-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/hi-IN/Conventions.po
@@ -1,13 +1,14 @@
 # translation of Conventions.po to Hindi
 # Rajesh Ranjan <rranjan@redhat.com>, 2007, 2008.
 # Rajesh Ranjan <rajesh672@gmail.com>, 2009.
+# rajesh <rajesh@fedoraproject.org>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-09-29T05:30:03\n"
-"PO-Revision-Date: 2009-12-02 05:13-0500\n"
-"Last-Translator: Rajesh Ranjan <rajesh672@gmail.com>\n"
+"PO-Revision-Date: 2012-08-31 05:23-0400\n"
+"Last-Translator: rajesh <rajesh@fedoraproject.org>\n"
 "Language-Team: Hindi <hindi.sf.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -92,6 +93,8 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keys and key combinations. For example:"
 msgstr ""
+"शेल कमांड, फ़ाइल नाम और पथ के साथ तंत्र इनपुट आलोकित करने के लिए प्रयुक्त. "
+"साथ ही कुंजी आलोकित करने और कुँजी युग्मन के लिए प्रयुक्त. उदाहरण के लिए:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -115,6 +118,9 @@ msgid ""
 "The above includes a file name, a shell command and a key, all presented in "
 "mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
+"उपर्युक्त में फ़ाइल नाम, शेल कमांड, और कुंजी शामिल है, जिसमें से सभी को "
+"मोनो-स्पेस्ड बोल्ड और सभी विशिष्टि में प्रस्तुत किया गया है जिसके लिए संदर्भ"
+" के शुक्रगुजार हैं."
 
 #. Tag: para
 #, no-c-format
@@ -122,6 +128,8 @@ msgid ""
 "Key combinations can be distinguished from an individual key by the plus "
 "sign that connects each part of a key combination. For example:"
 msgstr ""
+"कुँजी युग्मन को जोड़ के चिह्न के साथ किसी विशेष कुंजी से अलग किया जा सकता है"
+" जो कुंजी युग्मन के हर हिस्से को कनेक्ट करता है. उदाहरण के लिए:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -137,6 +145,8 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
 " to switch to a virtual terminal."
 msgstr ""
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
+" को किसी वर्चुअल टर्मिनल में जाने के लिए दबाएँ."
 
 #. Tag: para
 #, no-c-format
@@ -144,6 +154,8 @@ msgid ""
 "The first example highlights a particular key to press. The second example "
 "highlights a key combination: a set of three keys pressed simultaneously."
 msgstr ""
+"पहला उदाहरण दबाने के लिए किसी खास कुँजी को आलोकित करता है. दूसरा उदाहरण किसी"
+" कुँजी युग्मन को आलोकित करता है: तीन कुँजी का दबाया हुआ एक सेट."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -232,6 +244,21 @@ msgid ""
 "<menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice>"
 " from the <application>gedit</application> menu bar."
 msgstr ""
+"किसी विशेष वर्ण को <application>जीएडिट</application> फ़ाइल में डालने के लिए,"
+" "
+"<menuchoice><guimenu>अनुप्रयोग</guimenu><guisubmenu>उपसाधन</guisubmenu><guimenuitem>वर्ण"
+" नक्शा</guimenuitem></menuchoice> को मुख्य मेन्यू पट्टी से चुनें. आगे, चुनें"
+" "
+"<menuchoice><guimenu>खोजें</guimenu><guimenuitem>ढूँढ़ें…</guimenuitem></menuchoice>"
+" <application>वर्ण नक्शा</application> मेन्यू पट्टी से, "
+"<guilabel>खोजें</guilabel> क्षेत्र में वर्ण का नाम टाइप करें और "
+"<guibutton>आगे</guibutton> क्लिक करें. वर्ण जिसे आपने चाहा है वह "
+"<guilabel>वर्ण सारणी</guilabel> में आलोकित की जाएगी. आलोकित किए गए वर्ण को "
+"दो बार क्लिक करें ताकि इसे <guilabel>नक़ल के लिए पाठ</guilabel> क्षेत्र में "
+"रखी जा सके और फिर <guibutton>नक़ल करें</guibutton> बटन में क्लिक करें. अब "
+"अपने दस्तावेज़ में वापस जाएँ और  "
+"<menuchoice><guimenu>संपादन</guimenu><guimenuitem>चिपकाएँ</guimenuitem></menuchoice>"
+" को <application>जीएडिट</application> मेन्यू पट्टी से चुनें."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -330,6 +357,10 @@ msgid ""
 "package, version and release. Each word is a placeholder, either for text "
 "you enter when issuing a command or for text displayed by the system."
 msgstr ""
+"ऊपर गहरे तिरछे में शब्द को नोट करें — उपयोक्तानाम, domain.name, फ़ाइल-तंत्र,"
+" संकुल, संस्करण और रिलीज. हर शब्द एक प्लेसहोल्डर है, या तो पाठ जिसे आप दाखिल"
+" करते हैं जब कमांड निर्गत किया जाता है या तंत्र के द्वारा पाठ दिखाया जाता "
+"है."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -385,6 +416,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
+"books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
