--- a/publican/datadir/Common_Content/common/pa-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/pa-IN/Conventions.po
@@ -1,12 +1,13 @@
 # translation of Conventions.po to Punjabi
 # Jaswinder Singh <jsingh@redhat.com>, 2007, 2009.
+# jassy <jassy@fedoraproject.org>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-09-29T05:30:03\n"
-"PO-Revision-Date: 2009-12-02 03:03-0500\n"
-"Last-Translator: Jaswinder Singh <jsingh@redhat.com>\n"
+"PO-Revision-Date: 2012-08-31 05:47-0400\n"
+"Last-Translator: jassy <jassy@fedoraproject.org>\n"
 "Language-Team: Punjabi/Panjabi <kde-i18n-doc@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -84,6 +85,8 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keys and key combinations. For example:"
 msgstr ""
+"ਸਿਸਟਮ ਇੰਪੁੱਟ, ਜਿਵੇਂ ਸ਼ੈੱਲ ਕਮਾਂਡਾਂ, ਫਾਇਲ ਨਾਂ ਅਤੇ ਟਿਕਾਣੇ ਆਦਿ ਨੂੰ ਵੇਖਾਉਣ ਲਈ ਵਰਤੀ"
+" ਜਾਂਦੀ ਹੈ। ਕੀਕੈਪਸ ਅਤੇ ਕੀ-ਸੰਜੋਗ ਵੇਖਾਉਣ ਲਈ ਵੀ ਵਰਤੀ ਜਾਂਦੀ ਹੈ। ਉਦਾਹਰਨ ਲਈ:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -107,6 +110,8 @@ msgid ""
 "The above includes a file name, a shell command and a key, all presented in "
 "mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
+"ਉੱਪਰ ਫਾਇਲ ਨਾਂ, ਇੱਕ ਸ਼ੈੱਲ ਕਮਾਂਡ ਅਤੇ ਕੀਕੈਪ ਦਿੱਤੇ ਗਏ ਹਨ, ਸਭ ਮੋਨੋ-ਸਪੇਸ ਬੋਲਡ ਵਿੱਚ "
+"ਦਿੱਤੇ ਗਏ ਹਨ ਅਤੇ ਸਭ ਪ੍ਰਸੰਗ ਸਾਹਿਤ ਦਿੱਤੇ ਹਨ।"
 
 #. Tag: para
 #, no-c-format
@@ -114,6 +119,8 @@ msgid ""
 "Key combinations can be distinguished from an individual key by the plus "
 "sign that connects each part of a key combination. For example:"
 msgstr ""
+"ਬਟਨ ਕੰਬੀਨੇਸ਼ਨ ਹਰੇਕ ਬਟਨ ਤੇ ਚਿੰਨ੍ਹ ਤੋਂ ਵੱਕਰਾ ਹੋ ਸਕਦਾ ਹੈ ਜੋ ਬਟਨ ਕੰਬੀਨੇਸ਼ਨ ਦੇ ਹਰੇਕ"
+" ਭਾਗ ਨੂੰ ਜੋੜਦਾ ਹੈ। ਉਦਾਹਰਨ ਲਈ:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -129,6 +136,9 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
 " to switch to a virtual terminal."
 msgstr ""
+"ਵਰਚੁਅਲ ਟਰਮੀਨਲ ਤੇ ਜਾਣ ਲਈ "
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
+" ਦਬਾਓ।"
 
 #. Tag: para
 #, no-c-format
@@ -136,6 +146,8 @@ msgid ""
 "The first example highlights a particular key to press. The second example "
 "highlights a key combination: a set of three keys pressed simultaneously."
 msgstr ""
+"ਪਹਿਲਾ ਪੈਰ੍ਹਾ ਖਾਸ ਕੀਕੈਪ ਨੂੰ ਵੇਖਾਉਂਦਾ ਹੈ ਜੋ ਦਬਾਉਣਾ ਹੈ। ਦੂਜਾ ਦੋ ਕੁੰਜੀ ਸੰਜੋਗਾਂ "
+"ਨੂੰ ਵੇਖਾਉਂਦਾ ਹੈ (ਹਰੇਕ ਤਿੰਨ ਕੀਕੈਪਾਂ ਦਾ ਸੈੱਟ ਹੈ ਜੋ ਇੱਕੋ ਸਮੇਂ ਦਬਾਉਣੀਆਂ ਹਨ)।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -222,6 +234,19 @@ msgid ""
 "<menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice>"
 " from the <application>gedit</application> menu bar."
 msgstr ""
+"ਇੱਕ <application>gedit</application> fਫਾਇਲ ਵਿੱਚ ਖਾਸ ਅੱਖਰ ਜੋੜਨ ਲਈ, ਮੁੱਖ ਮੇਨੂ "
+"ਵਿੱਚੋਂ "
+"<menuchoice><guimenu>ਐਪਲੀਕੇਸ਼ਨ</guimenu><guisubmenu>ਸਹਾਇਕ</guisubmenu><guimenuitem>ਅੱਖਰ"
+" ਮੈਪ</guimenuitem></menuchoice> ਤੇ ਜਾਓ। ਅੱਗੇ, "
+"<menuchoice><guimenu>ਖੋਜ</guimenu><guimenuitem>ਲੱਭੋ…</guimenuitem></menuchoice>"
+" ਚੁਣੋ <application>ਅੱਖਰ ਮੈਪ</application> ਮੇਨੂ ਵਿੱਚੋਂ, "
+"<guilabel>ਖੋਜ</guilabel> ਵਿੱਚ ਅੱਖਰ ਦਾ ਨਾਲ ਟਾਈਪ ਕਰੋ ਅਤੇ "
+"<guibutton>ਅੱਗੇ</guibutton> ਦਬਾਓ। ਅੱਖਰ ਜੋ ਤੁਸੀਂ ਖੋਜੇ ਹਨ <guilabel>ਅੱਖਰ "
+"ਸਾਰਣੀ</guilabel> ਵਿੱਚ ਦਿਸਣਗੇ। ਇਸ ਹਾਈਲਾਈਟਡ ਅੱਖਰ ਨੂੰ ਟਬਲ-ਕਲਿੱਕ ਕਰੋ ਤਾਂ ਜੋ  "
+"<guilabel>ਕਾਪੀ ਲਈ ਟੈਕਸਟ</guilabel> ਫੀਲਡ ਵਿੱਚ ਚਲਾ ਜਾਓ ਅਤੇ ਫਿਰ "
+"<guibutton>ਕਾਪੀ</guibutton> ਬਟਨ ਦਬਾਓ। ਹੁਣ ਵਾਪਿਸ ਆਪਣੇ ਡੌਕੂਮੈਂਟ ਵਿੱਚ ਜਾਓ ਅਤੇ "
+"<menuchoice><guimenu>ਸੋਧ</guimenu><guimenuitem>ਚਿਪਕਾਓ</guimenuitem></menuchoice>ਚੁਣੋ"
+" <application>gedit</application> ਮੇਨੂ ਵਿੱਚੋਂ।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -316,6 +341,9 @@ msgid ""
 "package, version and release. Each word is a placeholder, either for text "
 "you enter when issuing a command or for text displayed by the system."
 msgstr ""
+"ਗੂੜ੍ਹੇ ਟੇਡੇ ਸ਼ਬਦ — ਯੂਜ਼ਰ-ਨਾਂ, ਡੋਮੇਨ.ਨਾਂ, ਫਾਇਲ-ਸਿਸਮਟ, ਪੈਕੇਜ, ਵਰਜਨ ਅਤੇ ਰੀਲੀਜ਼। "
+"ਹਰੇਕ ਸ਼ਬਦ ਇੱਕ ਪਲੇਸਹੋਲਟਡ ਹੈ, ਜਾਂ ਤਾਂ ਤੁਹਾਡੇ ਟੈਕਸਟ ਲਈ ਜਦੋਂ ਕਮਾਂਡ ਦਿੱਤੀ ਸੀ ਜਾਂ "
+"ਸਿਸਟਮ ਲਈ।"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -369,6 +397,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
+"books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
