--- a/publican/datadir/Common_Content/common/ta-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/ta-IN/Conventions.po
@@ -1,12 +1,13 @@
 # translation of Conventions.po to Tamil
 # I. Felix <ifelix@redhat.com>, 2007, 2008, 2009.
+# Shantha kumar <shkumar@redhat.com>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-09-29T05:30:03\n"
-"PO-Revision-Date: 2009-12-01 01:38-0500\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2012-08-31 06:14-0400\n"
+"Last-Translator: Shantha kumar <shkumar@redhat.com>\n"
 "Language-Team: American English <kde-i18n-doc@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -87,6 +88,9 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keys and key combinations. For example:"
 msgstr ""
+"ஷெல் கட்டளைகள், கோப்புப் பெயர்கள் மற்றும் பாதைகள் உள்ளிட்ட கணினி உள்ளீட்டைத்"
+" தனிப்படுத்தப் பயன்படுவது. பின்வரும் உதாரணத்தில் உள்ளது போன்ற விசைகள் "
+"மற்றும் விசைச் சேர்க்கைகளைத் தனிப்படுத்தவும் பயன்படுவது:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -110,6 +114,9 @@ msgid ""
 "The above includes a file name, a shell command and a key, all presented in "
 "mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
+"மேலே குறிப்பிட்டதில், கோப்பின் பெயர், ஷெல் கட்டளை, விசை ஆகியவை அடங்கியுள்ளன."
+" அனைத்தும் ஒற்றை இடைவெளியில் தடித்த எழுத்தில் தனிப்படுத்தி அறியக்கூடிய "
+"வகையில் அமைந்துள்ளது, உள்ளடக்கச் சூழலுக்கு நன்றி."
 
 #. Tag: para
 #, no-c-format
@@ -117,6 +124,9 @@ msgid ""
 "Key combinations can be distinguished from an individual key by the plus "
 "sign that connects each part of a key combination. For example:"
 msgstr ""
+"விசைச் சேர்க்கையின் ஒவ்வொரு பகுதியையும் இணைக்கும் கூட்டல் குறியைக் கொண்டு, "
+"விசைச் சேர்க்கையை தனித்த விசையிலிருந்து வேறுபடுத்தி அறியலாம். "
+"எடுத்துக்காட்டு:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -132,6 +142,9 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
 " to switch to a virtual terminal."
 msgstr ""
+"மெய்நிகர் சாதன முனைக்கு மாற "
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
+" ஐ அழுத்தவும்."
 
 #. Tag: para
 #, no-c-format
@@ -139,6 +152,10 @@ msgid ""
 "The first example highlights a particular key to press. The second example "
 "highlights a key combination: a set of three keys pressed simultaneously."
 msgstr ""
+"முதல் எடுத்துக்காட்டு குறிப்பாக அழுத்த வேண்டிய விசையைத் தனிப்படுத்திக் "
+"காண்பிக்கிறது. இரண்டாம் எடுத்துக்காட்டு ஒரு விசைச் சேர்க்கையைத் "
+"தனிப்படுத்திக் காண்பிக்கிறது: அதாவது ஒரே சமயத்தில் அழுத்த வேண்டிய மூன்று "
+"விசைகளின் தொகுப்பு."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -230,6 +247,23 @@ msgid ""
 "<menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice>"
 " from the <application>gedit</application> menu bar."
 msgstr ""
+"ஒரு <application>gedit</application> கோப்பில் ஒரு சிறப்பு எழுத்துக்குறியைச் "
+"செருக பிரதான மெனுப் பட்டியில் இருந்து "
+"<menuchoice><guimenu>பயன்பாடுகள்</guimenu><guisubmenu>துணைக்கருவிகள்</guisubmenu><guimenuitem>எழுத்துக்குறி"
+" மேப்</guimenuitem></menuchoice> எனபதைத் தேர்வு செய்யவும். பிறகு  "
+"<application>எழுத்துக்குறி மேப்</application> மெனுப் பட்டியில் இருந்து "
+"<menuchoice><guimenu>தேடு</guimenu><guimenuitem>கண்டறி…</guimenuitem></menuchoice>"
+" என்பதைத் தேர்வு செய்து <guilabel>தேடு</guilabel> புலத்தில் "
+"எழுத்துக்குறியின் பெயரைத் தட்டச்சு செய்து <guibutton>அடுத்து</guibutton> "
+"என்பதைக் கிளிக் செய்யவும். நீங்கள் தேடிய எழுத்துக்குறி "
+"<guilabel>எழுத்துக்குறி அட்டவணையில்</guilabel> தனிப்படுத்திக் "
+"காண்பிக்கப்படும். <guilabel>நகலெடுக்க வேண்டிய உரை</guilabel> புலத்தில் அந்த "
+"எழுத்துக்குறியைச் செருக தனிப்படுத்திக் காண்பிக்கப்பட்ட எழுத்துக்குறியை "
+"இருகிளிக் செய்து பிறகு <guibutton>நகலெடு</guibutton> பொத்தானைக் கிளிக் "
+"செய்யவும். இப்போது மீண்டும் உங்கள் ஆவணத்திற்குச் சென்று "
+"<application>gedit</application> மெனுப்பட்டியில் இருந்து "
+"<menuchoice><guimenu>திருத்து</guimenu><guimenuitem>ஒட்டு</guimenuitem></menuchoice>"
+" என்பதைத் தேர்வு செய்யவும்."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -327,6 +361,11 @@ msgid ""
 "package, version and release. Each word is a placeholder, either for text "
 "you enter when issuing a command or for text displayed by the system."
 msgstr ""
+"மேலே தடித்த எழுத்திலும் சாய்ந்த எழுத்திலும் உள்ள சொற்களைக் கவனிக்கவும் — "
+"பயனர் பெயர், ஆட்களப் பெயர், கோப்பு-முறைமை, தொகுப்பு, பதிப்பு மற்றும் "
+"வெளியீடு. ஒவ்வொரு சொல்லும் ஒரு பதிலீட்டிடமாகும், அவை நீங்கள் ஒரு கட்டளையை "
+"அல்லது உரையை உள்ளிடும் போது அல்லது கணினி ஏதேனும் உரையைக் காண்பிக்கும் போது "
+"பயனப்டுத்தப் போகும் சொற்களுக்கு பதிலாக இடம்பெற்றுள்ளன."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
