--- a/publican/datadir/Common_Content/common/te-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/te-IN/Conventions.po
@@ -1,12 +1,13 @@
 # translation of Conventions.po to Telugu
 # Krishna Babu K <kkrothap@redhat.com>, 2007, 2008, 2009.
+# kkrothap <kkrothap@fedoraproject.org>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-09-29T05:30:03\n"
-"PO-Revision-Date: 2009-12-02 04:33-0500\n"
-"Last-Translator: Krishna Babu K <kkrothap@redhat.com>\n"
+"PO-Revision-Date: 2012-08-31 12:27-0400\n"
+"Last-Translator: kkrothap <kkrothap@fedoraproject.org>\n"
 "Language-Team: Telugu <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -87,6 +88,9 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keys and key combinations. For example:"
 msgstr ""
+"వ్యవస్థ యిన్పుట్, షెల్ కమాండ్స్, ఫైల్ పేర్లు మరియు పాత్‌లు వుద్దీపనం చేయుటకు"
+" వుపయోగించబడెను. కీలు మరియు కీయుగళాలను వుద్దీపనం చేయుటకు కూడా "
+"వుపయోగించబడెను. ఉదాహరణకు:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -109,6 +113,8 @@ msgid ""
 "The above includes a file name, a shell command and a key, all presented in "
 "mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
+"పైనది ఫైలు పేరును, షెల్ ఆదేశమును మరియు కీను చేర్చును, అన్నీ మోనో-స్పేస్‌డ్ "
+"బోల్డ్ నందు సమర్పించబడును మరియు ll సందర్భమునకు విడమర్చగల ధన్యవాదములు."
 
 #. Tag: para
 #, no-c-format
@@ -116,6 +122,8 @@ msgid ""
 "Key combinations can be distinguished from an individual key by the plus "
 "sign that connects each part of a key combination. For example:"
 msgstr ""
+"కీయుగళం యొక్క ప్రతి భాగమును కలిపే ప్లస్ గుర్తు ద్వారా వొక కీనుండి కీ "
+"యుగళాలను విడదీయగలం."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -131,6 +139,9 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
 " to switch to a virtual terminal."
 msgstr ""
+"వర్చువల్ మిషన్‌కు మారుటకు "
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
+" వత్తండి."
 
 #. Tag: para
 #, no-c-format
@@ -138,6 +149,8 @@ msgid ""
 "The first example highlights a particular key to press. The second example "
 "highlights a key combination: a set of three keys pressed simultaneously."
 msgstr ""
+"మొదటి వుదాహరణ ఫలానా కీను వత్తమని వుద్దీపనం చేయును. రెండవ వుదాహరణ కీ "
+"యుగళాన్ని వుద్దీపనం చేయును: వొకదాని తరువాత వొకటి మూడు కీలు వత్తాలి."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -227,6 +240,20 @@ msgid ""
 "<menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice>"
 " from the <application>gedit</application> menu bar."
 msgstr ""
+"<application>gedit</application> ఫైలునకు ప్రత్యేక అక్షరం చేర్చుటకు, "
+"<menuchoice><guimenu>అనువర్తనములు</guimenu><guisubmenu>వుపకరణాలు</guisubmenu><guimenuitem>అక్షర"
+" పటం</guimenuitem></menuchoice> ను ముఖ్య మెనూ బార్ నుండి యెంచుకొనుము. "
+"తరువాత, "
+"<menuchoice><guimenu>వెతుకు</guimenu><guimenuitem>కనుగొను…</guimenuitem></menuchoice>"
+" ను <application>అక్షర పటం</application> మెను బార్ నుండి యెంచుకొని, అక్షరం "
+"పేరును <guilabel>వెతుకు</guilabel> క్షేత్రం నందు ప్రవేశపెట్టి "
+"<guibutton>తరువాత</guibutton> నొక్కుము. మీరు వెతికే అక్షరం <guilabel>అక్షర "
+"పటం</guilabel> నందు వుద్దీపనం చేయబడను. ఉద్దీపనం చేసిన అక్షరంను "
+"<guilabel>నకలుతీయు పాఠం</guilabel> క్షేత్రమునందు వుంచుటకు దానిని రెండుసార్లు"
+" నొక్కండి అప్పుడు <guibutton>నకలుతీయి</guibutton> బటన్ నొక్కండి. ఇప్పుడు మీ "
+"పత్రమునకు వెళ్ళి "
+"<menuchoice><guimenu>సరిచేయి</guimenu><guimenuitem>అతికించు</guimenuitem></menuchoice>"
+"  <application>gedit</application> మెనూ బార్ నుండి యెంచుకొనుము."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -326,6 +353,10 @@ msgid ""
 "package, version and release. Each word is a placeholder, either for text "
 "you enter when issuing a command or for text displayed by the system."
 msgstr ""
+"పై యీ పదాలను బోల్డ్ యిటాలిక్ నందు నోట్ చేయి — వాడుకరిపేరు, డొమైన్.పేరు, "
+"ఫైల్-సిస్టమ్, ప్యాకేజీ, వర్షన్ మరియు విడుదల. ప్రతి పదం ప్లేస్‌హోల్టర్, మీరు "
+"ఆదేశం యిచ్చునప్పుడు ప్రవేశపెట్టిన పాఠమునకు లేదా వ్యవస్థ చేత ప్రదర్శించబడిన "
+"పాఠమునకు."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -380,6 +411,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
+"books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
