--- a/publican/datadir/Common_Content/common/uk-UA/Conventions.po
+++ b/publican/datadir/Common_Content/common/uk-UA/Conventions.po
@@ -3,12 +3,12 @@
 # 
 # Maxim Dziumanenko <dziumanenko@gmail.com>, 2009.
 # Yuri Chornoivan <yurchor@ukr.net>, 2010.
+# Yuri Chornoivan <yurchor@ukr.net>, 2010, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: Conventions\n"
-"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2010-09-29T05:30:03\n"
-"PO-Revision-Date: 2010-09-29 03:07-0400\n"
+"Project-Id-Version: 0\n"
+"POT-Creation-Date: 2012-08-30T01:59:11\n"
+"PO-Revision-Date: 2012-08-31 12:10-0400\n"
 "Last-Translator: Yuri Chornoivan <yurchor@ukr.net>\n"
 "Language-Team: Ukrainian <translation@linux.org.ua>\n"
 "MIME-Version: 1.0\n"
@@ -87,6 +87,9 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keys and key combinations. For example:"
 msgstr ""
+"Використовується для позначення інформації, що вводиться до системи, зокрема"
+" команд оболонки, назв файлів та їх адрес. Крім того, використовується для "
+"позначення назв клавіш та комбінацій клавіш. Приклад:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -110,6 +113,8 @@ msgid ""
 "The above includes a file name, a shell command and a key, all presented in "
 "mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
+"У наведеному вище прикладі вказано назву файла, команду оболонки та назву "
+"клавіші, які позначено моноширинним жирним шрифтом."
 
 #. Tag: para
 #, no-c-format
@@ -117,6 +122,8 @@ msgid ""
 "Key combinations can be distinguished from an individual key by the plus "
 "sign that connects each part of a key combination. For example:"
 msgstr ""
+"Для відокремлення клавіш у складі комбінацій клавіш використовується знак "
+"«+». Приклад:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -132,6 +139,9 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
 " to switch to a virtual terminal."
 msgstr ""
+"Натисніть "
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>,"
+" щоб перейти до віртуального термінала."
 
 #. Tag: para
 #, no-c-format
@@ -139,6 +149,9 @@ msgid ""
 "The first example highlights a particular key to press. The second example "
 "highlights a key combination: a set of three keys pressed simultaneously."
 msgstr ""
+"У першому прикладі позначено назву окремої клавіші. У другому — дві "
+"комбінації клавіш (кожна є сукупністю трьох клавіш, які слід натискати "
+"одночасно)."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -225,6 +238,18 @@ msgid ""
 "<menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice>"
 " from the <application>gedit</application> menu bar."
 msgstr ""
+"Щоб вставити спеціальний символ у файлі <application>gedit</application>, у "
+"головному меню виберіть <guimenu>Програми > Стандартні > Таблиця "
+"символів</guimenu>. Потім, виберіть <guimenu>Пошук > Знайти…</guimenu> у "
+"меню <application>Таблиця символів</application>, введіть назву символу у "
+"полі <guilabel>Пошук</guilabel> та натисніть "
+"<guibutton>Наступний</guibutton>. Символ, який ви шукаєте, буде позначено у "
+"полі <guilabel>Таблиця символів</guilabel>. Двічі клацніть на позначеному "
+"символі, щоб помістити його у поле <guilabel>Текст для "
+"копіювання</guilabel>, а потім натисніть кнопку "
+"<guibutton>Копіювати</guibutton>. Тепер поверніться назад до вашого "
+"документа і скористайтеся пунктом меню <guimenu>Правка > Вставити</guimenu> "
+"<application>gedit</application>."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -324,6 +349,10 @@ msgid ""
 "package, version and release. Each word is a placeholder, either for text "
 "you enter when issuing a command or for text displayed by the system."
 msgstr ""
+"У наведених прикладах жирним курсивом позначаються ім'я_користувача, "
+"назва.домену, файлова система, пакет, версія та випуск. Кожне слово "
+"замінюється при вводі на фактичну команду, що вводиться або замінюється при "
+"виводі справжнім текстом, який покаже система."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
