--- a/publican/datadir/Common_Content/common/pl-PL/Conventions.po
+++ b/publican/datadir/Common_Content/common/pl-PL/Conventions.po
@@ -1,11 +1,12 @@
 # translation of pl.po to Polish
 # Piotr Drąg <piotrdrag@gmail.com>, 2009.
+# raven <piotrdrag@gmail.com>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: pl\n"
 "POT-Creation-Date: 2010-12-01T22:56:38\n"
-"PO-Revision-Date: 2010-12-02 10:27-0500\n"
-"Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
+"PO-Revision-Date: 2012-08-31 10:28-0400\n"
+"Last-Translator: raven <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <trans-pl@lists.fedoraproject.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -83,6 +84,9 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keys and key combinations. For example:"
 msgstr ""
+"Używana do wyróżniania wejścia systemu, w tym poleceń powłoki, nazw plików i"
+" ścieżek. Używana także do wyróżniania klawiszy i ich kombinacji. Na "
+"przykład:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -106,6 +110,9 @@ msgid ""
 "The above includes a file name, a shell command and a key, all presented in "
 "mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
+"Powyższy tekst zawiera nazwę pliku, polecenie powłoki i klawisz, wszystkie "
+"przedstawione za pomocą pogrubionej czcionki o stałej szerokości, a "
+"rozróżnialne dzięki kontekstowi."
 
 #. Tag: para
 #, no-c-format
@@ -113,6 +120,8 @@ msgid ""
 "Key combinations can be distinguished from an individual key by the plus "
 "sign that connects each part of a key combination. For example:"
 msgstr ""
+"Kombinacje klawiszy mogą być rozróżniane od pojedynczych klawiszy przez znak"
+" plus łączący każdą część kombinacji. Na przykład:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -129,6 +138,9 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
 " to switch to a virtual terminal."
 msgstr ""
+"Proszę nacisnąć "
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>,"
+" aby przełączyć na wirtualny terminal."
 
 #. Tag: para
 #, no-c-format
@@ -136,6 +148,9 @@ msgid ""
 "The first example highlights a particular key to press. The second example "
 "highlights a key combination: a set of three keys pressed simultaneously."
 msgstr ""
+"W pierwszym przykładzie wyróżniono pojedynczy klawisz do naciśnięcia. W "
+"drugim wyróżniono kombinację klawiszy, zestaw trzech klawiszy do wciśnięcia "
+"jednocześnie."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -224,6 +239,21 @@ msgid ""
 "<menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice>"
 " from the <application>gedit</application> menu bar."
 msgstr ""
+"Aby wstawić znak specjalny do pliku programu "
+"<application>gedit</application>, należy wybrać "
+"<menuchoice><guimenu>Programy</guimenu><guisubmenu>Akcesoria</guisubmenu><guimenuitem>Mapa"
+" znaków</guimenuitem></menuchoice> z głównego menu panelu. Następnie należy "
+"wybrać "
+"<menuchoice><guimenu>Wyszukiwanie</guimenu><guimenuitem>Znajdź…</guimenuitem></menuchoice>"
+" z paska menu <application>Mapy znaków</application>, wpisać nazwę znaku w "
+"polu <guilabel>Wyszukiwanie</guilabel> i nacisnąć "
+"<guibutton>Następny</guibutton>. Poszukiwany znak zostanie wyróżniony na "
+"<guilabel>Tablicy znaków</guilabel>. Podwójne kliknięcie wyróżnionego znaku "
+"wstawi go do pola <guilabel>Tekst do skopiowania</guilabel>. Następnie "
+"należy nacisnąć przycisk <guibutton>Skopiuj</guibutton>. Teraz należy "
+"przełączyć z powrotem do dokumentu i wybrać "
+"<menuchoice><guimenu>Edycja</guimenu><guimenuitem>Wklej</guimenuitem></menuchoice>"
+" z paska menu programu <application>gedit</application>."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -323,6 +353,10 @@ msgid ""
 "package, version and release. Each word is a placeholder, either for text "
 "you enter when issuing a command or for text displayed by the system."
 msgstr ""
+"Proszę zauważyć pogrubione i pochylone słowa powyżej — nazwa_użytkownika, "
+"nazwa.domeny, system-plików, pakiet, wersja i wydanie. Każde z nich jest "
+"tymczasowe, przeznaczone do zastąpienia tekstem wpisywanym podczas wydawania"
+" polecenia lub tekstem wyświetlanym przez system."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
