--- a/publican/datadir/Common_Content/common/uk-UA/Revision_History.po
+++ b/publican/datadir/Common_Content/common/uk-UA/Revision_History.po
@@ -1,11 +1,12 @@
 # AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Yuri Chornoivan <yurchor@ukr.net>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: 0\n"
-"POT-Creation-Date: 2012-07-28T22:20:05\n"
-"PO-Revision-Date: \n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: None\n"
+"POT-Creation-Date: 2012-08-30T01:59:11\n"
+"PO-Revision-Date: 2012-08-31 12:11-0400\n"
+"Last-Translator: Yuri Chornoivan <yurchor@ukr.net>\n"
+"Language-Team: Ukrainian <kde-i18n-uk@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -23,14 +24,14 @@ msgstr "Журнал версій"
 #. Tag: firstname
 #, no-c-format
 msgid "Jeff"
-msgstr ""
+msgstr "Jeff"
 
 #. Tag: surname
 #, no-c-format
 msgid "Fearn"
-msgstr ""
+msgstr "Fearn"
 
 #. Tag: member
 #, no-c-format
 msgid "Publican 3.0"
-msgstr ""
+msgstr "Publican 3.0"
