--- a/publican/datadir/Common_Content/common/de-DE/Conventions.po
+++ b/publican/datadir/Common_Content/common/de-DE/Conventions.po
@@ -3,13 +3,14 @@
 # Daniela Kugelmann <dkugelma@redhat.com >, 2008.
 # Hedda Peters <hpeters@redhat.com>, 2009.
 # Fabien Affolter <fab@fedoraproject.org>
+# hedda <hedda@fedoraproject.org>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-09-29T05:30:03\n"
-"PO-Revision-Date: 2009-12-02 07:25-0500\n"
-"Last-Translator: Hedda Peters <hpeters@redhat.com>\n"
+"PO-Revision-Date: 2012-09-02 07:46-0400\n"
+"Last-Translator: hedda <hedda@fedoraproject.org>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -34,7 +35,7 @@ msgid ""
 "and draw attention to specific pieces of information."
 msgstr ""
 "Dieses Handbuch verwendet mehrere Konventionen, um bestimmte Wörter und "
-"Phrasen hervorzuheben und Aufmerksamkeit auf spezifische Informationen zu "
+"Sätze hervorzuheben und Aufmerksamkeit auf bestimmte Informationen zu "
 "lenken."
 
 #. Tag: para
@@ -74,7 +75,7 @@ msgid ""
 "follows."
 msgstr ""
 "Es werden vier typografische Konventionen verwendet, um die Aufmerksamkeit "
-"auf spezifische Wörter und Phrasen zu lenken. Diese Konventionen und die "
+"auf bestimmte Wörter und Sätze zu lenken. Diese Konventionen und die "
 "Umstände, unter denen sie auftreten, sind folgende:"
 
 #. Tag: para
@@ -90,6 +91,9 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keys and key combinations. For example:"
 msgstr ""
+"Dies wird verwendet, um Systemeingaben hervorzuheben, einschließlich Shell-"
+"Befehle, Dateinamen und -pfade. Es wird ebenfalls zum Hervorheben von Tasten"
+" und Tastenkombinationen verwendet. Zum Beispiel:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -113,6 +117,9 @@ msgid ""
 "The above includes a file name, a shell command and a key, all presented in "
 "mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
+"Das oben aufgeführte Beispiel beinhaltet einen Dateinamen, einen Shell-"
+"Befehl und eine Taste. Alle werden nichtproportional fett dargestellt und "
+"alle können, dank des Kontextes, leicht unterschieden werden."
 
 #. Tag: para
 #, no-c-format
@@ -120,6 +127,9 @@ msgid ""
 "Key combinations can be distinguished from an individual key by the plus "
 "sign that connects each part of a key combination. For example:"
 msgstr ""
+"Tastenkombinationen unterscheiden sich von einzelnen Tasten durch das "
+"Pluszeichen, das die einzelnen Teile einer Tastenkombination miteinander "
+"verbindet. Zum Beispiel:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -135,6 +145,9 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>"
 " to switch to a virtual terminal."
 msgstr ""
+"Drücken Sie "
+"<keycombo><keycap>Strg</keycap><keycap>Alt</keycap><keycap>F2</keycap></keycombo>,"
+" um zu einem virtuellen Terminal zu wechseln."
 
 #. Tag: para
 #, no-c-format
@@ -142,6 +155,9 @@ msgid ""
 "The first example highlights a particular key to press. The second example "
 "highlights a key combination: a set of three keys pressed simultaneously."
 msgstr ""
+"Das erste Beispiel hebt die zu drückende Taste hervor. Das zweite Beispiel "
+"hebt eine Tastenkombination hervor: eine Gruppe von drei Tasten, die "
+"gleichzeitig gedrückt werden müssen."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -188,8 +204,8 @@ msgid ""
 " names; dialog box text; labeled buttons; check-box and radio button labels;"
 " menu titles and sub-menu titles. For example:"
 msgstr ""
-"Dies kennzeichnet Wörter oder Phrasen, die auf einem System vorkommen, "
-"einschließlich Applikationsnamen, Text in Dialogboxen, beschriftete "
+"Dies kennzeichnet Wörter oder Sätze, die auf einem System vorkommen, "
+"einschließlich Applikationsnamen, Text in Dialogfeldern, beschriftete "
 "Schaltflächen, Bezeichnungen für Auswahlkästchen und Radio-Buttons, "
 "Überschriften von Menüs und Untermenüs. Zum Beispiel:"
 
@@ -234,6 +250,21 @@ msgid ""
 "<menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</guimenuitem></menuchoice>"
 " from the <application>gedit</application> menu bar."
 msgstr ""
+"Um ein Sonderzeichen in eine <application>gedit</application>-Datei "
+"einzufügen, wählen Sie "
+"<menuchoice><guimenu>Anwendungen</guimenu><guisubmenu>Zubehör</guisubmenu><guimenuitem>Zeichentabelle</guimenuitem></menuchoice>"
+" aus der Hauptmenüleiste. Wählen Sie als Nächstes "
+"<menuchoice><guimenu>Suchen</guimenu><guimenuitem>Suchen</guimenuitem></menuchoice>"
+" aus der Menüleiste der <application>Zeichentabelle</application>, geben Sie"
+" im Feld <guilabel>Suchbegriff</guilabel> den Namen des Zeichens ein und "
+"klicken Sie auf <guibutton>Weitersuchen</guibutton>. Das gesuchte Zeichen "
+"wird daraufhin in der <guilabel>Zeichentabelle</guilabel> hervorgehoben. "
+"Doppelklicken Sie auf dieses hervorgehobene Zeichen, um es in das Feld "
+"<guilabel>Zu kopierender Text</guilabel> zu übernehmen und klicken Sie "
+"anschließend auf die Schaltfläche <guibutton>Kopieren</guibutton>. Gehen Sie"
+" nun zurück in Ihr Dokument und wählen Sie "
+"<menuchoice><guimenu>Bearbeiten</guimenu><guimenuitem>Einfügen</guimenuitem></menuchoice>"
+" aus der <application>gedit</application>-Menüleiste."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -247,7 +278,7 @@ msgid ""
 msgstr ""
 "Der oben aufgeführte Text enthält Applikationsnamen, systemweite Menünamen "
 "und -elemente, applikationsspezifische Menünamen sowie Schaltflächen und "
-"Text innerhalb einer GUI-Oberfläche. Alle werden proportional fett "
+"Text innerhalb einer grafischen Oberfläche. Alle werden proportional fett "
 "dargestellt und sind anhand des Kontextes unterscheidbar."
 
 #. Tag: para
@@ -273,10 +304,11 @@ msgid ""
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
 msgstr ""
-"Egal ob nichtproportional fett oder proportional fett, ein zusätzlicher "
-"Kursivdruck weist auf einen ersetzbaren oder variablen Text hin. Kursivdruck"
-" kennzeichnet Text, der nicht wörtlich eingeben wird, oder angezeigter Text,"
-" der sich je nach gegebenen Umständen ändert. Zum Beispiel:"
+"Sowohl bei nichtproportional fett als auch bei proportional fett weist ein "
+"zusätzlicher Kursivdruck auf einen ersetzbaren oder variablen Text hin. "
+"Kursivdruck kennzeichnet Text, der nicht wörtlich eingeben wird, oder "
+"angezeigten Text, der sich abhängig von den gegebenen Umständen "
+"unterscheiden kann. Zum Beispiel:"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -334,6 +366,10 @@ msgid ""
 "package, version and release. Each word is a placeholder, either for text "
 "you enter when issuing a command or for text displayed by the system."
 msgstr ""
+"Beachten Sie die kursiv dargestellten Begriffe oben — username, domain.name,"
+" file-system, package, version und release. Jedes Wort ist ein Platzhalter "
+"entweder für Text, den Sie für einen Befehl eingeben, oder für Text, der vom"
+" System angezeigt wird."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -343,8 +379,8 @@ msgid ""
 "Aside from standard usage for presenting the title of a work, italics "
 "denotes the first use of a new and important term. For example:"
 msgstr ""
-"Neben der Standardbenutzung für die Darstellung des Titels eines Werks, "
-"zeigt der Kursivdruck auch die erstmalige Nutzung eines neuen und wichtigen "
+"Neben der Standardbenutzung für die Darstellung des Titels eines Werks zeigt"
+" der Kursivdruck auch die erstmalige Verwendung eines neuen und wichtigen "
 "Begriffs an. Zum Beispiel:"
 
 #. Tag: para
@@ -359,7 +395,7 @@ msgstr "Publican ist ein <firstterm>DocBook</firstterm> Publishing-System."
 # Conventions
 #, no-c-format
 msgid "Pull-quote Conventions"
-msgstr "Konventionen für Seitenansprachen (engl.: pull-quotes)"
+msgstr "Konventionen für Seitenansprachen"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -370,7 +406,8 @@ msgid ""
 "surrounding text."
 msgstr ""
 "Ausgaben des Terminals und Auszüge aus dem Quellcode werden visuell vom "
-"umliegenden Text hervorgehoben."
+"umliegenden Text hervorgehoben durch sogenannte Seitenansprachen (auch Pull-"
+"Quotes genannt)."
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
@@ -380,9 +417,9 @@ msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced "
 "roman</computeroutput> and presented thus:"
 msgstr ""
-"Eine Ausgabe, die an das Terminal gesendet wird, wird in den Schrifttyp "
-"<computeroutput>nichtproportional Roman</computeroutput> gesetzt und demnach"
-" wie folgt präsentiert:"
+"Eine an das Terminal gesendete Ausgabe wird in den Schrifttyp "
+"<computeroutput>nichtproportional Roman</computeroutput> gesetzt und wie "
+"folgt dargestellt:"
 
 #. Tag: screen
 #, no-c-format
@@ -390,6 +427,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
+"books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
+"books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 
 #. Tag: para
 # translation auto-copied from project Publican Common, version 3, document
