Fix ID dedupe code for sections. BZ #856555 Fix clean_ids changing file perms. BZ #854425

--- a/publican/datadir/Common_Content/common/mr-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/mr-IN/Conventions.po
@@ -103,7 +103,7 @@ msgid ""
 "command."
 msgstr ""
 "सध्याच्या कार्रत डिरेक्ट्रीमध्ये "
-"<filename><filename>my_next_bestselling_novel</filename> फाइलची अंतर्भुत "
+"<filename>my_next_bestselling_novel</filename> फाइलची अंतर्भुत "
 "माहिती  पाहण्याकरीता, शेल प्रॉम्पट वर <command>cat "
 "my_next_bestselling_novel</command> आदेश द्या व आदेश चालविण्याकरीता "
 "<keycap>Enter</keycap> दाबा."
