--- a/publican/Changes
+++ b/publican/Changes
@@ -75,6 +75,8 @@
   - Fix DOCTYPE in revision history merge. BZ #849030
   - Fix incorrect Revision order. BZ #845432
   - Fix fop.xconf missing. BZ #831475
+  - Fix ID dedupe code for sections. BZ #856555
+  - Fix clean_ids changing file perms. BZ #854425
 
 2.6-3 Thu Jul 28 2011 
   - Force publican to use UTF8 for command line options.
