update win32 build instructions, add create brand test

--- a/publican/README
+++ b/publican/README
@@ -98,8 +98,19 @@ TODO: put the tgz where?
     $ debuild
 
 Windows
-    Install Perl http://www.activestate.com/activeperl/
-TODO: deps
+    Install gitbash
+    clone source repo
+    Install Perl http://strawberryperl.com/
+	cpan tool
+	install Module::Build Config::Simple Perl::Critic XML::TreeBuilder Locale::Maketext::Gettext File::Inplace
+
+	http://search.cpan.org/CPAN/authors/id/C/CH/CHIPT/File-Inplace-0.20.tar.gz
+        https://rt.cpan.org/Public/Bug/Display.html?id=63940
+	https://rt.cpan.org/Ticket/Attachment/869125/450100/win32.diff
+	blah blah
+
+	install Locale::PO String::Similarity DateTime::Format::DateParse Syntax::Highlight::Engine::Kate HTML::FormatText
+	install HTML::FormatText::WithLinks::AndTables Test::Pod
 
     Install NSIS
         http://nsis.sourceforge.net/Download
