--- a/publican/Changes
+++ b/publican/Changes
@@ -1,4 +1,4 @@
-3.0  UNRELEASED
+3.0.0  Wed Oct 31 2012
   - Update Changes file. BZ #661568
   - Cleaned up README file.
   - Corrected document conventions text. BZ#651616
