--- a/publican/Changes
+++ b/publican/Changes
@@ -1,3 +1,6 @@
+3.0.1 UNRELEASED
+  - Ensure clean_ids doesn't change owner. BZ #854425
+
 3.0.0  Wed Oct 31 2012
   - Update Changes file. BZ #661568
   - Cleaned up README file.
