add Interlingua support from Nik Kalach <nik.kalach@inbox.ru>

--- a/publican/Changes
+++ b/publican/Changes
@@ -1,3 +1,6 @@
+3.1.0
+  - Add Interlingua support from Nik Kalach <nik.kalach@inbox.ru>
+
 3.0.0  Wed Oct 31 2012
   - Update Changes file. BZ #661568
   - Cleaned up README file.
