--- a/publican/Changes
+++ b/publican/Changes
@@ -1,5 +1,7 @@
-3.1.0
+3.0.1 UNRELEASED
   - Add Interlingua support from Nik Kalach <nik.kalach@inbox.ru>
+  - Replace hard coded paths with publican::ConfigData. BZ #661946
+  - Ensure Publican source builds and tests without Publican being installed. BZ #874180
 
 3.0.0  Wed Oct 31 2012
   - Update Changes file. BZ #661568
