--- a/publican/Changes
+++ b/publican/Changes
@@ -2,6 +2,7 @@
   - Add Interlingua support from Nik Kalach <nik.kalach@inbox.ru>
   - Replace hard coded paths with publican::ConfigData. BZ #661946
   - Ensure Publican source builds and tests without Publican being installed. BZ #874180
+  - Fix broken menu alignment. BZ #880621
 
 3.0.0  Wed Oct 31 2012
   - Update Changes file. BZ #661568
