Add OpenSuse Install Section by Norman Dunbar <norman@dunbar-it.co.uk>. BZ #787243

--- a/publican/Changes
+++ b/publican/Changes
@@ -5,6 +5,7 @@
   - Fix broken menu alignment. BZ #880621
   - Ensure clean_ids doesn't change owner or group. BZ #854425
   - Fix incorrect Revision order. BZ #845432
+  - Add OpenSuse Install Section by Norman Dunbar <norman@dunbar-it.co.uk>. BZ #787243
 
 3.0.0  Wed Oct 31 2012
   - Update Changes file. BZ #661568
