Fix POD typos. BZ #874277

--- a/publican/Changes
+++ b/publican/Changes
@@ -6,6 +6,7 @@
   - Ensure clean_ids doesn't change owner or group. BZ #854425
   - Fix incorrect Revision order. BZ #845432
   - Add OpenSuse Install Section by Norman Dunbar <norman@dunbar-it.co.uk>. BZ #787243
+  - Fix POD typos. BZ #874277
 
 3.0.0  Wed Oct 31 2012
   - Update Changes file. BZ #661568
