--- a/publican/Changes
+++ b/publican/Changes
@@ -7,6 +7,7 @@
   - Fix incorrect Revision order. BZ #845432
   - Add OpenSuse Install Section by Norman Dunbar <norman@dunbar-it.co.uk>. BZ #787243
   - Fix POD typos. BZ #874277
+  - Remove place holder P tag from HTML para. BZ #847206
 
 3.0.0  Wed Oct 31 2012
   - Update Changes file. BZ #661568
