--- a/publican/Changes
+++ b/publican/Changes
@@ -9,6 +9,7 @@
   - Fix POD typos. BZ #874277
   - Remove place holder P tag from HTML para. BZ #847206
   - Allow brands to override DocType Type and URI. BZ #839128
+  - Ignore unexpected parameters in cfg file, and emit a message. BZ #875021
 
 3.0.0  Wed Oct 31 2012
   - Update Changes file. BZ #661568
