--- a/publican/Changes
+++ b/publican/Changes
@@ -11,7 +11,7 @@
   - Allow brands to override DocType Type and URI. BZ #839128
   - Ignore unexpected parameters in cfg file, and emit a message. BZ #875021
   - Support scripts directory in brands. BZ #839975
-  - Rempve hard coded broder from tables. BZ #875967
+  - Remove hard coded border from tables. BZ #875967
 
 3.0.0  Wed Oct 31 2012
   - Update Changes file. BZ #661568
