--- a/publican/Changes
+++ b/publican/Changes
@@ -1,5 +1,5 @@
 3.1.0 UNRELEASED
-  - Add Interlingua support from Nik Kalach <nik.kalach@inbox.ru>
+  - Add Interlingua support from Nik Kalach <nik.kalach@inbox.ru> BZ #863899
   - Replace hard coded paths with publican::ConfigData. BZ #661946
   - Ensure Publican source builds and tests without Publican being installed. BZ #874180
   - Fix broken menu alignment. BZ #880621
