Allow menu_category to be localisable. BZ #872432

--- a/publican/Changes
+++ b/publican/Changes
@@ -12,6 +12,7 @@
   - Ignore unexpected parameters in cfg file, and emit a message. BZ #875021
   - Support scripts directory in brands. BZ #839975
   - Remove hard coded border from tables. BZ #875967
+  - Allow menu_category to be localisable. BZ #872432
 
 3.0.0  Wed Oct 31 2012
   - Update Changes file. BZ #661568
