--- a/publican/Changes
+++ b/publican/Changes
@@ -13,6 +13,7 @@
   - Support scripts directory in brands. BZ #839975
   - Remove hard coded border from tables. BZ #875967
   - Allow menu_category to be localisable. BZ #872432
+  - Fix UTF8 in brand_path breaking build. BZ #875021
 
 3.0.0  Wed Oct 31 2012
   - Update Changes file. BZ #661568
