--- a/publican/Changes
+++ b/publican/Changes
@@ -15,7 +15,8 @@
   - Allow menu_category to be localisable. BZ #872432
   - Fix UTF8 in brand_path breaking build. BZ #875021
   - Support wkhtmltopdf cover pages. BZ #874344
-  - add support for book_templates in brands. BZ #874344
+  - Add support for book_templates in brands. BZ #874344
+  - Fix draft not appearing in PDF. BZ #873586
 
 3.0.0  Wed Oct 31 2012
   - Update Changes file. BZ #661568
