Change some H tags to DIV. BZ #846899 Use better TOC for PDF. BZ #879388

--- a/publican/TODO
+++ b/publican/TODO
@@ -1,10 +1,21 @@
-Publican 3.0:
+Publican 3.1:
 
-floating toc alignment broken. Andy
-footer not being generated on style 1 sites
-Update PUG
-why is Devel::Cover broken? http://www.perlmonks.org/?node_id=683376
-Translations ... damn
+Style Changes:
+
+	div.warning h2 -> div.admonition_header p
+	h1.confidential -> div.confidential
+	h5.formalpara -> div.formalpara
+	$formal h6 -> $formal div.title
+	h4.editedby -> div.editedby
+	h3.author -> div.author etc
+		editor
+	h2.subtitle -> div.subtitle
+
+Draft on cover page?
+Legal notice height 100%?
+
+
+*********************************************************
 
 
 List of unscheduled things we should look at doing:
