--- a/publican/Changes
+++ b/publican/Changes
@@ -17,6 +17,8 @@
   - Support wkhtmltopdf cover pages. BZ #874344
   - Add support for book_templates in brands. BZ #874344
   - Fix draft not appearing in PDF. BZ #873586
+  - Change some H tags to DIV. BZ #846899
+  - Use better TOC for PDF. BZ #879388
 
 3.0.0  Wed Oct 31 2012
   - Update Changes file. BZ #661568
