--- a/publican/Changes
+++ b/publican/Changes
@@ -19,6 +19,7 @@
   - Fix draft not appearing in PDF. BZ #873586
   - Change some H tags to DIV. BZ #846899
   - Use better TOC for PDF. BZ #879388
+  - Fix directory ownership in SPEC file. BZ #894522
 
 3.0.0  Wed Oct 31 2012
   - Update Changes file. BZ #661568
