--- a/publican/Changes
+++ b/publican/Changes
@@ -18,6 +18,7 @@
   - Add support for book_templates in brands. BZ #874344
   - Fix draft not appearing in PDF. BZ #873586
   - Change some H tags to DIV. BZ #846899
+  - Remove DocBook TOCs from PDF. BZ #874795
   - Use better TOC for PDF. BZ #879388
   - Fix directory ownership in SPEC file. BZ #894522
 
