--- a/publican/po/ru.po
+++ b/publican/po/ru.po
@@ -1178,7 +1178,7 @@ msgid "Sub title for a book"
 msgstr ""
 
 #: lib/Publican/Builder.pm:1113
-msgid "Table of Content"
+msgid "Table of Contents"
 msgstr ""
 
 #: lib/Publican/CreateBook.pm:304
