--- a/publican/po/uk.po
+++ b/publican/po/uk.po
@@ -1351,7 +1351,7 @@ msgid "Sub title for a book"
 msgstr "Підзаголовок книги"
 
 #: lib/Publican/Builder.pm:1113
-msgid "Table of Content"
+msgid "Table of Contents"
 msgstr ""
 
 #: lib/Publican/CreateBook.pm:304
